--- a/thatFood/Base.lproj/Main.storyboard
+++ b/thatFood/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qAn-1A-ifH">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,7 +15,7 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="thatFood" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dWD-rW-utO">
@@ -27,7 +27,7 @@
                                 <viewLayoutGuide key="safeArea" id="B7H-oA-wqe"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqi-Pt-87F">
-                                <rect key="frame" x="16" y="414" width="288" height="84"/>
+                                <rect key="frame" x="16" y="384" width="288" height="26"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -39,9 +39,11 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oqi-Pt-87F" secondAttribute="trailing" constant="16" id="I9u-p9-KWV"/>
                             <constraint firstItem="oqi-Pt-87F" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="aGJ-2E-tfz"/>
                             <constraint firstItem="dWD-rW-utO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="r3G-JK-LRS"/>
-                            <constraint firstItem="oqi-Pt-87F" firstAttribute="top" secondItem="dWD-rW-utO" secondAttribute="bottom" constant="30" id="tlZ-j7-tKb"/>
+                            <constraint firstItem="oqi-Pt-87F" firstAttribute="top" secondItem="dWD-rW-utO" secondAttribute="bottom" id="tlZ-j7-tKb"/>
                             <constraint firstItem="dWD-rW-utO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="vbj-Bo-AjC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oqi-Pt-87F" secondAttribute="bottom" constant="26" id="yMq-pu-xP6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oqi-Pt-87F" secondAttribute="bottom" constant="26" id="yMq-pu-xP6">
+                                <variation key="heightClass=compact-widthClass=compact" constant="26"/>
+                            </constraint>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -61,7 +63,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1002.4" y="129.31034482758622"/>
+            <point key="canvasLocation" x="1001.25" y="128.75"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="653-Rs-XyW">
